# scorep_plugin_uncore

./: AUTHORS  CMakeLists.txt  README.md  uncore_base.c  uncore_base.h  uncore_boxes.h  uncore_perf_plugin.c  uncore_perf_plugin.h  uncore_plugin.c  uncore_plugin.h  uncore_types.h  x86a_wrapper.c  x86a_wrapper.h
types/: fam15h.h  snbep.h  wsm.h
